@@ -16,6 +16,7 @@ import org.springframework.web.filter.CorsFilter;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import static org.springframework.http.HttpHeaders.*;
 
@@ -50,8 +51,9 @@ public class BeansConfiguration {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
         config.setAllowedOrigins(
-                Collections.singletonList(
-                        "http://localhost:4200"
+                List.of(
+                        "http://localhost:4200",
+                        "http://localhost:8080"
                 )
         );
         config.setAllowedHeaders(
